Overview of changes in Cairo 1.082
==================================

* Update the symbol export list for linking on win32
  (https://bugzilla.gnome.org/show_bug.cgi?id=665265) 

Overview of changes in Cairo 1.081
==================================

* Add a missing cairo_font_type_t value.
* Fix a test failure.

Overview of changes in Cairo 1.080
==================================

Since 1.06x
-----------
* Wrap new 1.8 and 1.10 API.
* Make Cairo::Pattern->set_extend, get_extend, set_filter and get_filter
  available to all pattern types, not just surface patterns.
* Make it possible to modify and create paths.

Since 1.071
-----------
* Add support for missing operator types.
* Fix compilation agains perl 5.15.x.

Overview of changes in Cairo 1.071
==================================

* Add new API:
  - recording surface
  - region functions
  - toy font face
  - PDF version functions
  - Cairo::in_clip
  - Cairo::Surface::create_for_rectangle
* Make it possible to modify and create paths.
* Make Cairo::Surface::create_similar callable as a class-static method, for
  consistency with Cairo::Surface::create_for_rectangle.
* Fix a few test failures.
* Add more examples.

Overview of changes in Cairo 1.070
==================================

* Wrap 1.8 API:
  - cairo_show_text_glyphs
  - cairo_scaled_font_text_to_glyphs and
    cairo_scaled_font_get_scale_matrix
  - cairo_surface_get_fallback_resolution and
    cairo_surface_has_show_text_glyphs
* Make Cairo::Pattern->set_extend, get_extend, set_filter and get_filter
  available to all pattern types, not just surface patterns.
* Fix a memory manage bug in Cairo::FtFontFace.
* Fix a bug in the enum conversion code that made it more lenient than
  intended.
* Add a few examples.
* Fix a few test failures.

Overview of changes in Cairo 1.062
==================================

* Cairo::FtFontFace: Keep the FT_Face alive long enough to avoid
  segfaults
* Add two new example programs
* Fix test failures
